--- a/Project2/project2.ipynb
+++ b/Project2/project2.ipynb
@@ -6,7 +6,7 @@
     "id": "e3AaPphVQtfQ"
    },
    "source": [
-    "# Project 2 : Textual analysis of movie reviews"
+    "# Project 2 : Analysis of Mobile Phone Prices"
    ]
   },
   {
@@ -25,9 +25,6 @@
    "metadata": {
     "id": "W96Ki3enQtfT"
    },
-   "source": [
-    "<img src=\"https://getthematic.com/wp-content/uploads/2018/03/Harris-Word-Cloud-e1522406279125.png\">"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -47,172 +44,27 @@
    },
    "source": [
     "**Desired outcome of the case study.**\n",
-    "* In this project we will look at movie reviews from the v2.0 polarity dataset comes from\n",
-    "the http://www.cs.cornell.edu/people/pabo/movie-review-data.\n",
-    "    * It contains written reviews of movies divided into positive and negative reviews.\n",
+    "* In this project we will look at mobile phone prices from the dataset comes from Kaggle\n",
+    "    * It contains mobile phone features and their cost ranges (0:low cost, 1:medium cost, 2:high cost, 3:very high cost).\n",
     "* The idea is to *analyze* the data set, make *conjectures*, support or refute those conjectures with *data*, and *tell a story* about the data!\n",
     "    \n",
     "**Required Readings:** \n",
     "* This project will be based upon the scikit-learn Python library\n",
-    "* We will build upon the tutorial \"Working With Text Data\" which can be found at http://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html\n",
-    "* In particular, this project is quite similar to \"Exercise 2: Sentiment Analysis on movie reviews\" on the above web page.\n",
-    "* Read about deep learning at https://scikit-learn.org/stable/modules/neural_networks_supervised.html\n",
     "\n",
     "\n",
     "**Case study assumptions:**\n",
     "* You have access to a python installation\n",
     "\n",
     "**Required Python libraries:**\n",
+    "* Pandas (pandas.pydata.org)",
     "* Numpy (www.numpy.org) (should already be installed from Case Study 2)\n",
     "* Matplotlib (matplotlib.org) (should already be installed from Case Study 2)\n",
     "* Scikit-learn (scikit-learn.org).\n",
-    "* You are also welcome to use the Python Natural Language Processing Toolkit (www.nltk.org) (though it is not required).\n",
     "\n",
     "**NOTE**\n",
     "* Please don't forget to save the notebook frequently when working in IPython Notebook, otherwise the changes you made can be lost."
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "WQQrXatF30aY"
-   },
-   "source": [
-    "# Getting the data onto Colab example."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ludq2Spg3zdC",
-    "outputId": "293514e3-536e-4a20-9834-f38b833a2bd4"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2022-02-15 15:44:33--  https://www.cs.cornell.edu/people/pabo/movie-review-data/review_polarity.tar.gz\n",
-      "Resolving www.cs.cornell.edu (www.cs.cornell.edu)... 132.236.207.36\n",
-      "Connecting to www.cs.cornell.edu (www.cs.cornell.edu)|132.236.207.36|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 3127238 (3.0M) [application/x-gzip]\n",
-      "Saving to: ‘review_polarity.tar.gz’\n",
-      "\n",
-      "review_polarity.tar 100%[===================>]   2.98M  4.63MB/s    in 0.6s    \n",
-      "\n",
-      "2022-02-15 15:44:35 (4.63 MB/s) - ‘review_polarity.tar.gz’ saved [3127238/3127238]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "! wget https://www.cs.cornell.edu/people/pabo/movie-review-data/review_polarity.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "j6lyvK0T4HCk"
-   },
-   "source": [
-    "Look for the directory txt_sentoken"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "QqAfVpEJ4A0P",
-    "outputId": "671cd462-7769-4564-ec03-e23325a47e1c"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "poldata.README.2.0  review_polarity.tar.gz  sample_data  txt_sentoken\n"
-     ]
-    }
-   ],
-   "source": [
-    "! tar xzf review_polarity.tar.gz\n",
-    "! ls"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "7m-jzLoyQtfU"
-   },
-   "source": [
-    "## Problem 1 (10 points): Complete Exercise 2: Sentiment Analysis on movie reviews from http://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "QyZeq4COQtfU"
-   },
-   "source": [
-    "* Installing scikit-learn using Anaconda does not necessarily download the example source-code.\n",
-    "* Accordingly, you may need to download these directly from Github at https://github.com/scikit-learn/scikit-learn:\n",
-    "    * The data can be downloaded using doc/tutorial/text_analytics/data/movie_reviews/fetch_data.py\n",
-    "    * A skeleton for the solution can be found in doc/tutorial/text_analytics/skeletons/exercise_02_sentiment.py\n",
-    "    * A completed solution can be found in doc/tutorial/text_analytics/solutions/exercise_02_sentiment.py\n",
-    "* Here is a direct link to the code to help you out:  https://github.com/scikit-learn/scikit-learn/tree/main/doc/tutorial/text_analytics\n",
-    "* **It is ok to use the solution provided in the scikit-learn distribution as a starting place for your work.**\n",
-    "\n",
-    "### Modify the solution to Exercise 2 so that it can run in this iPython notebook\n",
-    "* This will likely involve moving around data files and/or small modifications to the script."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "x9rv82MAQtfV"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "-1cVyJKHQtfV"
-   },
-   "source": [
-    "## Problem 2 (10 points): Explore the scikit-learn TfidVectorizer class\n",
-    "\n",
-    "**Read the documentation for the TfidVectorizer class at http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html.** \n",
-    "* Define the term frequency–inverse document frequency (TF-IDF) statistic (http://en.wikipedia.org/wiki/Tf%E2%80%93idf will likely help).\n",
-    "* Run the TfidVectorizer class on the training data above (docs_train).\n",
-    "* Explore the min_df and max_df parameters of TfidVectorizer.  What do they mean? How do they change the features you get?\n",
-    "* Explore the ngram_range parameter of TfidVectorizer.  What does it mean? How does it change the features you get? (Note, large values  of ngram_range may take a long time to run!)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "id": "YGCOW1yjQtfW"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jVWQAJmsQtfW"
-   },
    "source": [
     "## Problem 3 (15 points): Machine learning algorithms\n"
    ]
@@ -396,31 +248,21 @@
     "\n",
     "    -----------------------------------\n",
     "    Question 1:\n",
-    "    Points: 10\n",
+    "    Points: 20\n",
     "    -----------------------------------\n",
     "    \n",
     "    -----------------------------------\n",
     "    Question 2:\n",
-    "    Points: 10\n",
+    "    Points: 20\n",
     "    -----------------------------------\n",
     "        \n",
     "    -----------------------------------\n",
     "    Question 3:\n",
-    "    Points: 15 \n",
+    "    Points: 20 \n",
     "    -----------------------------------\n",
     "  \n",
     "    -----------------------------------\n",
     "    Question 4:  \n",
-    "    Points: 15\n",
-    "    -----------------------------------\n",
-    "\n",
-    "    -----------------------------------\n",
-    "    Question 5:  \n",
-    "    Points: 10\n",
-    "    -----------------------------------\n",
-    "\n",
-    "    -----------------------------------\n",
-    "    Question 6:  \n",
     "    Points: 20\n",
     "    -----------------------------------\n",
     "\n",
