--- a/Project2/Project2.ipynb
+++ b/Project2/Project2.ipynb
@@ -56,7 +56,7 @@
     "* blue: has bluetooth or not \n",
     "* clock_speed: speed at which microprocessor executes instructions \n",
     "* dual_sim: has dual sim support or not\n",
-    "* four_g: sas 4G or not\n",
+    "* four_g: has 4G or not\n",
     "* etc.\n",
     "\n",
     "The target is the price range, which has 4 classes including 0 (low cost), 1 (medium cost), 2 (high cost) and 3 (very high cost).\n",
